--- a/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
+++ b/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
@@ -23,7 +23,7 @@
                     <ul id="rate" class="reservation-details">
                         <li >
                             <!-- handling some logics in HTML. Forced to use coz of bad handling in ctrlr -->
-                            {{zestStationData.isHourlyRateOn ? 'HOURS' :'DAY_NIGHTS'|translate}}<span>{{zestStationData.isHourlyRateOn ? selectedReservation.reservation_details.total_hours :
+                            {{zestStationData.isHourlyRateOn ? 'HOURS' :'DAY_NIGHTS'|translate}}<span>{{zestStationData.isHourlyRateOn ? selectedReservation.reservation_details.no_of_hours :
                             selectedReservation.reservation_details.total_nights}}</span>
                         </li>
                         <li ng-hide="isRateSuppressed()">
