CICO-36246-develop fixes ECI issues in zest station, needs to have Arrival Time set..will create a separate bug for API to Update Arrival Time when guest goes to check/through ECI via kiosk

--- a/zest_station/partials_v2/checkin/zsCheckinEarly.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEarly.html
@@ -63,7 +63,7 @@
                     <span>
                         {{'EARLY_AVAIL_PURCHASE_SUB' |translate}}
 
-                        {{early_charge_symbol}}{{early_checkin_charge}} 
+                        {{early_checkin_charge}} 
 
                         {{'EARLY_AVAIL_PURCHASE_SUB_2' |translate}}
                     </span>
