--- a/zest_station/partials_v2/checkin/zsCheckinEarly.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEarly.html
@@ -21,7 +21,7 @@
         <h3 ng-show="mode === 'EARLY_CHECKIN_SELECT'">
             {{'EARLY_AVAIL_SUB_HEADER' |translate}} {{standardCheckinTime}} <br>
              
-             {{'EARLY_AVAIL_SUB_HEADER_2' |translate}} {{early_charge_symbol}}{{early_checkin_charge}} 
+             {{'EARLY_AVAIL_SUB_HEADER_2' |translate}} {{early_checkin_charge}} 
         </h3>
 
         <!-- pre-paid -->
