admin-lang-UI-Update adds support for editing text via touch-device (iPad)

--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -103,6 +103,17 @@
                         </select>
                     </div>
                 </div>
+
+                <div class="entry with-label">
+                    <label>Text Editor Mode</label>
+                    <label class='admin-label-description'>Allows Station user to edit text by double-clicking current text. *Works best via Internet Browser</label>
+                    <div class="entry select">
+                        <select ng-model="zestStationData.editorModeEnabled">
+                            <option value="true">Enabled</option>
+                            <option value="false">Disabled</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="actions" class="align-center">
