CICO-36750 cleanup css

--- a/zest_station/partials_v2/zsRoot.html
+++ b/zest_station/partials_v2/zsRoot.html
@@ -2,7 +2,7 @@
     <div id="loading-spinner"></div>
 </div>
 
-<span ng-show="zestStationData.demoModeEnabled == 'true'" class="demo-text">demo</span>
+<span ng-show="zestStationData.demoModeEnabled == 'true'" class="demo-text dev-cls top-left-demo">demo</span>
 
 <span ng-show="zestStationData.editorModeEnabled == 'true'" class="demo-text editor dev-cls" >Editor Mode Enabled</span>
 
