CICO-36895 adding extra button action for key 2 dipenser

--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -74,6 +74,7 @@
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
         <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
+        <button ng-hide="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="dispenseKey()">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
     </div>
 </section>
 
