--- a/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
+++ b/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
@@ -77,6 +77,7 @@
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
         <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
+         <button ng-hide="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="dispenseKey()">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()' ></span>
 </section>
