--- a/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
@@ -1,14 +1,20 @@
 <!-- email entry mode -->
 <section id="main" role="main" ng-show=" mode === 'EMAIL_ENTRY_MODE'" class="centered">
     <div id="content" class="input-field-contents">
-        <h1 translate>TYPE_EMAIL_IN</h1>
-        <h3 translate>TYPE_EMAIL_IN_SUB</h3>
+        <h1>
+            <text editable-text="TYPE_EMAIL_IN"> {{'TYPE_EMAIL_IN' |translate}}</text>
+        </h1>
+        <h3>
+            <text editable-text="TYPE_EMAIL_IN_SUB"> {{'TYPE_EMAIL_IN_SUB' |translate}}</text>
+        </h3>
         <form method="post" class="form">
             <div class="entry input">
                 <input id="email-entry" type="text" ng-focus="showOnScreenKeyboard('email-entry')" click-touch="showOnScreenKeyboard('email-entry')" class="start-focused" ng-keydown="resetTime()" ng-model='email' enter-press="goToNext()" value="" touch-press />
             </div>
             <div class="entry action">
-                <button type="button" class="button" touch-press='goToNext()' ng-class="{'overlay': email.length < 1}">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" touch-press='goToNext()' ng-class="{'overlay': email.length < 1}">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
@@ -16,8 +22,12 @@
 <!-- email invalid mode -->
 <section id="main" role="main" ng-show=" mode === 'EMAIL_INVLAID_MODE'" class="centered">
     <div id="content">
-        <h1 translate>EMAIL_ERR_HEADER</h1>
-        <h2 translate>EMAIL_ERR_HEADER_SUB</h2>
+        <h1>
+            <text editable-text="EMAIL_ERR_HEADER"> {{'EMAIL_ERR_HEADER' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="EMAIL_ERR_HEADER_SUB"> {{'EMAIL_ERR_HEADER_SUB' |translate}}</text>
+        </h2>
         <nav id="options" role="nav">
             <ul role="menu">
                 <li>
@@ -25,13 +35,15 @@
                         <!--div ng-include="'/assets/zest_station/css/icons/keyboard.svg'"></div-->
                         <div ng-include="icons.url.keyboard"></div>
                     </button>
-                    {{'RE_TYPE' | translate}}
+                    <text editable-text="RE_TYPE"> {{'RE_TYPE' |translate}}</text>
                     <span>"{{email}}"</span>
                 </li>
             </ul>
         </nav>
         <div id="actions" class="align-right">
-            <button type="button" class="button transparent" click-touch="skipEmail()">{{'SKIP_BTN' | translate}}</button>
+            <button type="button" class="button transparent" click-touch="skipEmail()">
+                <text editable-text="SKIP_BTN"> {{'SKIP_BTN' |translate}}</text>
+            </button>
         </div>
     </div>
 </section>
