--- a/zest_station/partials_v2/checkin/zsCheckinTermsConditions.html
+++ b/zest_station/partials_v2/checkin/zsCheckinTermsConditions.html
@@ -1,17 +1,29 @@
 <section id="main" class="centered kiosk" role="main" click-touch='resetTime()'>
     <div id="content" ng-show="mode === 'TERMS_CONDITIONS'">
-        <h1>{{'TERMS_CONDITIONS_VIEW_HEADER' |translate}}</h1>
+        <h1>
+            <text editable-text="TERMS_CONDITIONS_VIEW_HEADER"> {{'TERMS_CONDITIONS_VIEW_HEADER' |translate}}</text>
+        </h1>
         <div id="flex-holder" >
             <div id="textual" ng-iscroll="terms" ng-iscroll-delay="100" ng-init="setScroll()" class="pull-left station-terms scrollable fill-height"> <!-- Add ng-scroll here -->
                 <div class="wrapper">
-                    <h4><label>{{'TERMS_CONDITIONS_HEADER' |translate}}</label></h4>
+                    <h4><label>
+                        <text editable-text="TERMS_CONDITIONS_HEADER"> {{'TERMS_CONDITIONS_HEADER' |translate}}</text>
+                    </label></h4>
                     <div id="terms" data-ng-bind-html="trustAsHtml(zestStationData.hotelTermsAndConditions)"></div>
                 </div>
             </div>
             <div id="actions" class="pull-right">
-                <button type="button" class="button" touch-press="agreeTerms()" ><label>{{'TERMS_CONDITIONS_ACCEPT' |translate}}</label></button>
-                <button type="button" class="button transparent" touch-press="clickedOnCloseButton()" ><label>{{'TERMS_CONDITIONS_CANCEL' |translate}}</label></button>
-                <p><strong >{{'TERMS_CONDITIONS_SUB' |translate}}</strong><label>{{'TERMS_CONDITIONS_SUB_ADDITIONAL' |translate}}</label></p>
+                <button type="button" class="button" touch-press="agreeTerms()" ><label>
+                    <text editable-text="TERMS_CONDITIONS_ACCEPT"> {{'TERMS_CONDITIONS_ACCEPT' |translate}}</text>
+                </label></button>
+                <button type="button" class="button transparent" touch-press="clickedOnCloseButton()" ><label> 
+                    <text editable-text="TERMS_CONDITIONS_CANCEL"> {{'TERMS_CONDITIONS_CANCEL' |translate}}</text>
+                </label></button>
+                <p><strong >
+                    <text editable-text="TERMS_CONDITIONS_SUB"> {{'TERMS_CONDITIONS_SUB' |translate}}</text>
+                </strong><label>
+                    <text editable-text="TERMS_CONDITIONS_SUB_ADDITIONAL"> {{'TERMS_CONDITIONS_SUB_ADDITIONAL' |translate}}</text>
+                </label></p>
             </div>
         </div>
     </div>
