--- a/zest_station/partials_v2/checkin/zsSelectReservationForCheckIn.html
+++ b/zest_station/partials_v2/checkin/zsSelectReservationForCheckIn.html
@@ -2,10 +2,16 @@
 <!-- Content -->
 <section id="main" class="centered" role="main"  click-touch='resetTime()'>
     <div id="content">
-        <h1>{{'SEL_RES_HEADER' |translate}}</h1>
+        <h1>
+            <text editable-text="SEL_RES_HEADER"> {{'SEL_RES_HEADER' |translate}}</text>
+        </h1>
         <div id="labels">
-            <span class="label">{{'SEL_RES_HEADER' |translate}}</span>
-            <span class="label">{{'SEL_RES_CO_DATE_ROOM_TYPE' |translate}}</span>
+            <span class="label">
+                <text editable-text="SEL_RES_HEADER"> {{'SEL_RES_HEADER' |translate}}</text>
+            </span>
+            <span class="label">
+                <text editable-text="SEL_RES_CO_DATE_ROOM_TYPE"> {{'SEL_RES_CO_DATE_ROOM_TYPE' |translate}}</text>
+            </span>
         </div>
 
         <ul id="selection"> <!-- Show no more than 3 results per page -->
@@ -13,7 +19,7 @@
                 <div class="details" touch-press="selectReservation(reservation)">
                     <strong class="name">{{reservation.guest_details[0].last_name}}, {{reservation.guest_details[0].first_name}}</strong>
                     <div class="date">
-                        {{reservation.departure_date | date:dateFormat}} ({{reservation.stay_dates.length-1}} {{'FIND_RESERVATION_HOURLY_NIGHTLY' |translate}})
+                        {{reservation.departure_date | date:dateFormat}} ({{reservation.stay_dates.length-1}} <text editable-text="FIND_RESERVATION_HOURLY_NIGHTLY"> {{'FIND_RESERVATION_HOURLY_NIGHTLY' |translate}}</text>)
                         <!--span>{{reservation.room_type}}</span-->
                         <span>{{reservation.stay_dates[0].room_type}}</span>
                     </div>
@@ -21,9 +27,13 @@
             </li>
         </ul>
         <div id="actions" class='select-reservation selectPagingBtns'> <!-- If showing only "Next" button, add class "align-right". When showing only "Previous" button, or both buttons, remove that class -->
-            <button type="button" class="button transparent prev" touch-press='moveToPreviousPage()' ng-show="currentPage !==1">{{'SEL_RES_LAST' |translate}}</button>
+            <button type="button" class="button transparent prev" touch-press='moveToPreviousPage()' ng-show="currentPage !==1">
+                <text editable-text="SEL_RES_LAST"> {{'SEL_RES_LAST' |translate}}</text>
+            </button>
             <label >{{currentPage}} / {{totalPages}}</label>
-            <button type="button" class="button transparent next" touch-press='moveToNextPage()' ng-show="currentPage !== totalPages">{{'SEL_RES_NEXT' |translate}}</button>
+            <button type="button" class="button transparent next" touch-press='moveToNextPage()' ng-show="currentPage !== totalPages">
+                <text editable-text="SEL_RES_NEXT"> {{'SEL_RES_NEXT' |translate}}</text>
+            </button>
         </div>
     </div>
 
