--- a/zest_station/partials_v2/checkin/zscheckInReservationSearch.html
+++ b/zest_station/partials_v2/checkin/zscheckInReservationSearch.html
@@ -1,31 +1,41 @@
 <section id="main" role="main" class="centered" click-touch='resetTime()'>
     <!---------------------------------- last name -------------------------------->
     <div id="content" ng-show="mode === 'LAST_NAME_ENTRY'" class="input-field-contents">
-        <h1 translate>TYPE_LAST</h1>
+        <h1>
+            <text editable-text="TYPE_LAST"> {{'TYPE_LAST' |translate}}</text>
+        </h1>
         <form method="post" class="form">
             <div class="entry input">
                 <input type="text" placeholder="" ng-focus="showOnScreenKeyboard('last-name')" click-touch="showOnScreenKeyboard('input_text')" ng-model="reservationParams.last_name" enter-press="lastNameEntered()" id="last-name" touch-press/>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="lastNameEntered();">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="lastNameEntered();">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- first name -------------------------------->
     <div id="content" ng-show="mode === 'FIRST_NAME_ENTRY_MODE'" class="input-field-contents">
-        <h1 translate>TYPE_FIRST_NAME</h1>
+        <h1>
+            <text editable-text="TYPE_FIRST_NAME"> {{'TYPE_FIRST_NAME' |translate}}</text>
+        </h1>
         <form method="post" class="form">
             <div class="entry input">
                 <input type="text" placeholder="" ng-focus="showOnScreenKeyboard('first-name')" click-touch="showOnScreenKeyboard('input_text')" ng-model="reservationParams.first_name" enter-press="firstNameEntered()" id="first-name" touch-press/>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="firstNameEntered();">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="firstNameEntered();">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- choose options -------------------------------->
     <div id="content" ng-show="mode === 'CHOOSE_OPTIONS'">
-        <h1>{{'CHECK_IN_SELECT_HEADER' |translate}}</h1>
+        <h1>
+            <text editable-text="CHECK_IN_SELECT_HEADER"> {{'CHECK_IN_SELECT_HEADER' |translate}}</text>
+        </h1>
         <nav id="options" role="nav">
             <ul role="menu">
                 <li ng-show="zestStationData.checkin_screen.authentication_settings.departure_date">
@@ -33,47 +43,61 @@
                         <!--div ng-include="'/assets/zest_station/css/icons/moon.svg'"></div-->
                         <div ng-include="icons.url.moon"></div>
                     </button>
-                    {{'CHECK_IN_SELECT_DATE' |translate}}
+                    <text editable-text="CHECK_IN_SELECT_DATE"> {{'CHECK_IN_SELECT_DATE' |translate}}</text>
                 </li>
                 <li class="break" ng-show="showOrBetweenDateAndNoOfNights">
-                    <span translate>OR_TEXT</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li ng-show="zestStationData.checkin_screen.authentication_settings.number_of_nights">
                     <button type="button" class="button option" touch-press='findByNoOfNights()'>
                         <!--div ng-include="'/assets/zest_station/css/icons/moon.svg'"></div-->
                         <div ng-include="icons.url.moon"></div>
                     </button>
-                    {{'CHECK_IN_NO_OF_NIGHTS' |translate}}
-                    <span translate>CHECK_IN_NO_OF_NIGHTS_SUB</span>
+                    <text editable-text="CHECK_IN_NO_OF_NIGHTS"> {{'CHECK_IN_NO_OF_NIGHTS' |translate}}</text>
+                    <span>
+                        <text editable-text="CHECK_IN_NO_OF_NIGHTS_SUB"> {{'CHECK_IN_NO_OF_NIGHTS_SUB' |translate}}</text>
+                    </span>
                 </li>
                 <li class="break" ng-show="showOrBetweenNoOfNightsAndEmail">
-                    <span translate>OR_TEXT</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li ng-show="zestStationData.checkin_screen.authentication_settings.email">
                     <button type="button" class="button option" touch-press='findByEmail()'>
                         <!--div ng-include="'/assets/zest_station/css/icons/email.svg'"></div-->
                         <div ng-include="icons.url.email"></div>
                     </button>
-                    {{'CHECK_IN_SELECT_EMAIL' |translate}}
-                    <span translate>CHECK_IN_SELECT_EMAIL_SUB</span>
+                    <text editable-text="CHECK_IN_SELECT_EMAIL"> {{'CHECK_IN_SELECT_EMAIL' |translate}}</text>
+                    <span>
+                        <text editable-text="CHECK_IN_SELECT_EMAIL_SUB"> {{'CHECK_IN_SELECT_EMAIL_SUB' |translate}}</text>
+                    </span>
                 </li>
                 <li class="break" ng-show="showOrBetweenEmailAndConfirmNo">
-                    <span translate>OR_TEXT</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li ng-show="zestStationData.checkin_screen.authentication_settings.confirmation">
                     <button type="button" class="button option" touch-press='findByConfirmation()'>
                         <!--div ng-include="'/assets/zest_station/css/icons/confirmation.svg'"></div-->
                         <div ng-include="icons.url.confirmation"></div>
                     </button>
-                    {{'CHECK_IN_SELECT_CONF' |translate}}
-                    <span translate>CHECK_IN_SELECT_CONF_SUB</span>
+                    <text editable-text="CHECK_IN_SELECT_CONF"> {{'CHECK_IN_SELECT_CONF' |translate}}</text>
+                    <span>
+                        <text editable-text="CHECK_IN_SELECT_CONF_SUB"> {{'CHECK_IN_SELECT_CONF_SUB' |translate}}</text>
+                    </span>
                 </li>
             </ul>
         </nav>
     </div>
     <!---------------------------------- date -------------------------------->
     <div id="content" ng-show="mode === 'FIND_BY_DATE'">
-        <h1 translate>FIND_BY_DATE</h1>
+        <h1>
+            <text editable-text="FIND_BY_DATE"> {{'FIND_BY_DATE' |translate}}</text>
+        </h1>
         <form method="post" class="form short">
             <div class="entry input" click-touch="showDatePicker(); resetTime();">
                 <!--div ng-include="'/assets/css/icons/date.svg'"></div-->
@@ -81,53 +105,71 @@
                 <input placeholder="" class="hasDatepicker start-focused" ng-model="reservationParams.date" id="departure-date" readonly>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="dateEntered()">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="dateEntered()">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- conf number -------------------------------->
     <div id="content" ng-show="mode === 'CONFIRM_NO_MODE'" class="input-field-contents">
-        <h1 translate>TYPE_CONF</h1>
+        <h1>
+            <text editable-text="TYPE_CONF"> {{'TYPE_CONF' |translate}}</text>
+        </h1>
         <form method="post" class="form">
             <div class="entry input">
                 <!--div ng-include="icons.url.confirmation"></div--><!-- input text icon placeholder, if needed in future -->
                 <input type="text" placeholder="" ng-focus="showOnScreenKeyboard('conf-number')" click-touch="showOnScreenKeyboard('conf-number'); resetTime();" ng-model="reservationParams.alt_confirmation_number" enter-press="confNumberEntered()" id="conf-number" touch-press/>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="confNumberEntered()">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="confNumberEntered()">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- no of nights -------------------------------->
     <div id="content" ng-show="mode === 'NO_OF_NIGHTS_MODE'" class="input-field-contents">
-        <h1 translate>FIND_BY_DATE_SUB</h1>
+        <h1>
+            <text editable-text="FIND_BY_DATE_SUB"> {{'FIND_BY_DATE_SUB' |translate}}</text>
+        </h1>
         <form method="post" class="form">
             <div class="entry input">
                 <!--div ng-include="icons.url.moon"></div--><!-- input text icon placeholder, if needed in future -->
                 <input type="tel" placeholder="" ng-focus="showOnScreenKeyboard('no-of-nights')" click-touch="showOnScreenKeyboard('no-of-nights')" ng-model="reservationParams.no_of_nights" enter-press="noOfNightsEntered()" id="no-of-nights" touch-press/>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="noOfNightsEntered()">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="noOfNightsEntered()">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- email -------------------------------->
     <div id="content" ng-show="mode === 'EMAIL_ENTRY_MODE'" class="input-field-contents">
-        <h1 translate>TYPE_EMAIL</h1>
+        <h1>
+            <text editable-text="TYPE_EMAIL"> {{'TYPE_EMAIL' |translate}}</text>
+        </h1>
         <form method="post" class="form">
             <div class="entry input">
                 <!--div ng-include="icons.url.email"></div--><!-- input text icon placeholder, if needed in future -->
                 <input type="text" placeholder="" ng-focus="showOnScreenKeyboard('guest-email')" click-touch="showOnScreenKeyboard('guest-email')" ng-model="reservationParams.email" enter-press="emailEntered()"  id="guest-email" touch-press/>
             </div>
             <div class="entry action">
-                <button type="button" class="button" click-touch="emailEntered();">{{'NEXT_BTN' | translate}}</button>
+                <button type="button" class="button" click-touch="emailEntered();">
+                    <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
+                </button>
             </div>
         </form>
     </div>
     <!---------------------------------- no match -------------------------------->
     <div id="content" ng-show="mode === 'NO_MATCH'">
-        <h1 translate>RES_SRCH_SRY</h1>
-        <h2 translate>RES_SRCH_SRY_SUB</h2>
+        <h1>
+            <text editable-text="RES_SRCH_SRY"> {{'RES_SRCH_SRY' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="RES_SRCH_SRY_SUB"> {{'RES_SRCH_SRY_SUB' |translate}}</text>
+        </h2>
         <nav id="options" role="nav">
             <ul role="menu">
                 <li>
@@ -135,11 +177,13 @@
                         <!--div ng-include="'/assets/zest_station/css/icons/keyboard.svg'"></div-->
                         <div ng-include="icons.url.keyboard"></div>
                     </button>
-                    {{'RES_SRCH_RE_ENTER_LAST' |translate}}
+                    <text editable-text="RES_SRCH_RE_ENTER_LAST"> {{'RES_SRCH_RE_ENTER_LAST' |translate}}</text>
                     <span ng-bind="reservationParams.last_name"></span>
                 </li>
                 <li class="break">
-                    <span>{{'OR_TEXT' | translate}}</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li>
                     <button type="button" class="button option" touch-press="reEnterText(''); resetTime();">
@@ -150,19 +194,23 @@
                         <!-- confirmation number -->
                         <div ng-include="icons.url.confirmation" ng-show="reservationParams.alt_confirmation_number.length>0"></div>
                     </button>
-                    {{'RES_SRCH_RE_ENTER_ROOM' |translate}}
+                    <text editable-text="RES_SRCH_RE_ENTER_ROOM"> {{'RES_SRCH_RE_ENTER_ROOM' |translate}}</text>
                     <span>{{reservationParams.email||reservationParams.no_of_nights||reservationParams.date||reservationParams.alt_confirmation_number}}</span>
                 </li>
                 <li class="break">
-                    <span>{{'OR_TEXT' | translate}}</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li>
                     <button type="button" class="button option" touch-press='talkToStaff(); resetTime();'>
                         <!--div ng-include="'/assets/zest_station/css/icons/staff.svg'"></div-->
                         <div ng-include="icons.url.staff"></div>
                     </button>
-                    {{'RES_SRCH_TALK' |translate}}
-                    <span>{{'RES_SRCH_TALK_SUB' |translate}}</span>
+                    <text editable-text="RES_SRCH_TALK"> {{'RES_SRCH_TALK' |translate}}</text>
+                    <span>
+                        <text editable-text="RES_SRCH_TALK_SUB"> {{'RES_SRCH_TALK_SUB' |translate}}</text>
+                    </span>
                 </li>
             </ul>
         </nav>
